--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,13 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""></script>
+
+  <meta name="google-signin-client_id" content = "668350379601-12a5u68p98f803fig7gig2m0s968svbr.apps.googleusercontent.com">
+<script src ="https:apis.google.com/js/platform.js"></script>
+
 </head>
 <body>
+  <div class="g-signin" data-onsuccess="onSignIn" data-longtitle="true"></div>
   <app-root></app-root>
 </body>
 </html>
