updated payment UI

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,11 @@
     <script>
         "https://identitytoolkit.googleapis.com/v1/accounts:signInWithCustomToken?key=[AIzaSyD1n0PIq2Z0b-v6A6Hkp-fElWuL5pmgjak]"
     </script>
+
+    <script>
+        "https://maps.googleapis.com/maps/api/geocode/outputFormat?parameters"
+        "address=24%20Sussex%20Drive%20Ottawa%20ON"
+    </script>
 </head>
 
 <body>
